<resources>
    <string name="app_name">slash app</string>
    <string name="title_activity_phone_authetication">PhoneAutheticationActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">.</string>
    <string name="btn_backspace">clear</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="to_use_upi">To use UPI, please enter your mobile number linked to your bank account</string>
    <string name="btn_continue">Continue</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="OTP">OTP</string>
    <string name="otp_verification_description">6 digit OTP has been sent to $n</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>