<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingVertical="@dimen/spacer_h_24"
    android:paddingHorizontal="@dimen/spacer_h_16"
    android:orientation="vertical"
    tools:context=".ui.base.authentication.PhoneAuthenticationFragment"
    >


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:src="@android:drawable/btn_dialog" />

    <TextView
        style="@style/Heading1"
        android:textColor="@color/high_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification" />

    <TextView
        style="@style/Subtitle2"
        android:layout_marginTop="@dimen/spacer_h_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification_description" />



        <EditText
            android:id="@+id/password_field"
            style="@style/Heading1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:enabled="false"
            android:hint="@string/OTP"
            android:layout_marginTop="@dimen/spacer_h_32"
            android:minHeight="48dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"/>




    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.example.slash.KeyboardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_continue"
            />
    </LinearLayout>



</LinearLayout>